--- a/nimdataframe.html
+++ b/nimdataframe.html
@@ -1276,12 +1276,8 @@ function main() {
     title="showDataframeInfo(df: nimdf)"><wbr />show<wbr />Dataframe<wbr />Info<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
   <li><a class="reference" href="#getColData,nimdf,int"
     title="getColData(df: nimdf; col: int): nimss"><wbr />get<wbr />Col<wbr />Data<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
-  <li><a class="reference" href="#getRowData,nimdf,int,varargs[int]"
-    title="getRowData(df: nimdf; row: int = 1; dfcols: varargs[int]): nimss"><wbr />get<wbr />Row<wbr />Data<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
-  <li><a class="reference" href="#getRowDataRange,nimdf,nimis,varargs[int]"
-    title="getRowDataRange(df: nimdf; rows: nimis = @ [0]; dfcols: varargs[int]): nimdf"><wbr />get<wbr />Row<wbr />Data<wbr />Range<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
-  <li><a class="reference" href="#getCellData,nimdf,int,int"
-    title="getCellData(df: nimdf; row: int = 1; col: int = 1): string"><wbr />get<wbr />Cell<wbr />Data<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
+  <li><a class="reference" href="#getRowDataRange,nimdf,nimis,nimis"
+    title="getRowDataRange(df: nimdf; rows: nimis = @ []; cols: nimis = @ []): nimdf"><wbr />get<wbr />Row<wbr />Data<wbr />Range<span class="attachedType" style="visibility:hidden">nimdf</span></a></li>
   <li><a class="reference" href="#sortcoldata,nimss,bool,bool"
     title="sortcoldata(coldata: nimss; header: bool = false; order = Ascending; sort: bool = true): nimss"><wbr />sortcoldata<span class="attachedType" style="visibility:hidden">nimss</span></a></li>
   <li><a class="reference" href="#sortdf,nimdf,int,string"
@@ -1594,41 +1590,18 @@ class="link-seesrc" target="_blank">Source</a>
 <a href="/edit/devel/nimdataframe.nim#L668" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
-<dt id="getRowData"><a name="getRowData,nimdf,int,varargs[int]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRowData</span><span class="Other">(</span><span class="Identifier">df</span><span class="Other">:</span> <span class="Identifier">nimdf</span><span class="Other">;</span> <span class="Identifier">row</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span> <span class="Identifier">dfcols</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">nimss</span> <span class="Other pragmabegin">{.</span><div class="pragma">
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="getRowDataRange"><a name="getRowDataRange,nimdf,nimis,nimis"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRowDataRange</span><span class="Other">(</span><span class="Identifier">df</span><span class="Other">:</span> <span class="Identifier">nimdf</span><span class="Other">;</span> <span class="Identifier">rows</span><span class="Other">:</span> <span class="Identifier">nimis</span> <span class="Other">=</span> <span class="Operator">@</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">cols</span><span class="Other">:</span> <span class="Identifier">nimis</span> <span class="Other">=</span> <span class="Operator">@</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">nimdf</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
-<p>getRowData</p>
-<p>gets one row of a nimdf dataframe </p>
+<p>getRowDataRange</p>
+<p>creates a new df with rows and cols as stipulated extracted from an exisiting df</p>
+<p>Following example uses rows 1,2,4,6 and cols 1,2,3 from df ndf5 to create a new df</p>
+<blockquote><p>var ndf6 = getRowDataRange(ndf5,rows = @[1,2,4,6],cols = @[1,2,3])</p></blockquote>
 
 &nbsp;&nbsp;<a
-href="/tree/master/nimdataframe.nim#L690"
+href="/tree/master/nimdataframe.nim#L692"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/nimdataframe.nim#L690" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-<dt id="getRowDataRange"><a name="getRowDataRange,nimdf,nimis,varargs[int]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRowDataRange</span><span class="Other">(</span><span class="Identifier">df</span><span class="Other">:</span> <span class="Identifier">nimdf</span><span class="Other">;</span> <span class="Identifier">rows</span><span class="Other">:</span> <span class="Identifier">nimis</span> <span class="Other">=</span> <span class="Operator">@</span> <span class="Other">[</span><span class="DecNumber">0</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">dfcols</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">int</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">nimdf</span> <span class="Other pragmabegin">{.</span><div class="pragma">
-    <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
-<dd>
-<p>getRowData</p>
-<p>gets one row of a nimdf dataframe </p>
-
-&nbsp;&nbsp;<a
-href="/tree/master/nimdataframe.nim#L715"
-class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/nimdataframe.nim#L715" class="link-seesrc" target="_blank" >Edit</a>
-
-</dd>
-<dt id="getCellData"><a name="getCellData,nimdf,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getCellData</span><span class="Other">(</span><span class="Identifier">df</span><span class="Other">:</span> <span class="Identifier">nimdf</span><span class="Other">;</span> <span class="Identifier">row</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span> <span class="Identifier">col</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
-<dd>
-<p>getCellData</p>
-<p>gets Data from a cell of the df at pos row/col </p>
-
-&nbsp;&nbsp;<a
-href="/tree/master/nimdataframe.nim#L727"
-class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/nimdataframe.nim#L727" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/nimdataframe.nim#L692" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="sortcoldata"><a name="sortcoldata,nimss,bool,bool"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sortcoldata</span><span class="Other">(</span><span class="Identifier">coldata</span><span class="Other">:</span> <span class="Identifier">nimss</span><span class="Other">;</span> <span class="Identifier">header</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">;</span> <span class="Identifier">order</span> <span class="Other">=</span> <span class="Identifier">Ascending</span><span class="Other">;</span>
@@ -1640,9 +1613,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>if sort is false no sorting will be performed</p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/nimdataframe.nim#L739"
+href="/tree/master/nimdataframe.nim#L730"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/nimdataframe.nim#L739" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/nimdataframe.nim#L730" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="sortdf"><a name="sortdf,nimdf,int,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">sortdf</span><span class="Other">(</span><span class="Identifier">df</span><span class="Other">:</span> <span class="Identifier">nimdf</span><span class="Other">;</span> <span class="Identifier">sortcol</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">;</span> <span class="Identifier">sortorder</span> <span class="Other">=</span> <span class="StringLit">&quot;&quot;</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">nimdf</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">DbError</span><span class="Other">,</span>
@@ -1657,9 +1630,9 @@ class="link-seesrc" target="_blank">Source</a>
 <blockquote><p><pre class = "listing"><span class="Keyword">var</span> <span class="Identifier">ndf2</span> <span class="Operator">=</span> <span class="Identifier">sortdf</span><span class="Punctuation">(</span><span class="Identifier">ndf</span><span class="Punctuation">,</span><span class="DecNumber">5</span><span class="Punctuation">,</span><span class="StringLit">&quot;asc&quot;</span><span class="Punctuation">)</span>  <span class="Operator">$</span> <span class="Identifier">sort</span> <span class="Identifier">a</span> <span class="Identifier">dataframe</span> <span class="Identifier">on</span> <span class="Identifier">the</span> <span class="Identifier">fifth</span> <span class="Identifier">col</span> <span class="Identifier">ascending</span></pre></p></blockquote>
 
 &nbsp;&nbsp;<a
-href="/tree/master/nimdataframe.nim#L813"
+href="/tree/master/nimdataframe.nim#L805"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/nimdataframe.nim#L813" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/nimdataframe.nim#L805" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="makeNimDf"><a name="makeNimDf,varargs[nimss]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">makeNimDf</span><span class="Other">(</span><span class="Identifier">dfcols</span><span class="Other">:</span> <span class="Identifier">varargs</span><span class="Other">[</span><span class="Identifier">nimss</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">nimdf</span> <span class="Other pragmabegin">{.</span><div class="pragma">
@@ -1670,9 +1643,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>creates a nimdf with passed in col data which is of type nimss </p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/nimdataframe.nim#L923"
+href="/tree/master/nimdataframe.nim#L915"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/nimdataframe.nim#L923" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/nimdataframe.nim#L915" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="createDataFrame"><a name="createDataFrame,string,int,char"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createDataFrame</span><span class="Other">(</span><span class="Identifier">filename</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">cols</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">2</span><span class="Other">;</span> <span class="Identifier">sep</span><span class="Other">:</span> <span class="Identifier">char</span> <span class="Other">=</span> <span class="CharLit">','</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">nimdf</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span>
@@ -1685,9 +1658,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>other should be clean , preprocess as needed</p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/nimdataframe.nim#L938"
+href="/tree/master/nimdataframe.nim#L930"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/nimdataframe.nim#L938" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/nimdataframe.nim#L930" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 <dt id="createRandomTestData"><a name="createRandomTestData,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createRandomTestData</span><span class="Other">(</span><span class="Identifier">filename</span><span class="Other">:</span> <span class="Identifier">string</span> <span class="Other">=</span> <span class="StringLit">&quot;nimDfTestData.csv&quot;</span><span class="Other">;</span>
@@ -1699,9 +1672,9 @@ class="link-seesrc" target="_blank">Source</a>
 <p>default name nimDfTestData.csv or as given </p>
 
 &nbsp;&nbsp;<a
-href="/tree/master/nimdataframe.nim#L962"
+href="/tree/master/nimdataframe.nim#L954"
 class="link-seesrc" target="_blank">Source</a>
-<a href="/edit/devel/nimdataframe.nim#L962" class="link-seesrc" target="_blank" >Edit</a>
+<a href="/edit/devel/nimdataframe.nim#L954" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 
@@ -1714,7 +1687,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2016-10-14 15:34:31 UTC</small>
+        <small>Made with Nim. Generated: 2016-10-15 10:11:46 UTC</small>
       </div>
     </div>
   </div>
