--- a/cx.html
+++ b/cx.html
@@ -2117,7 +2117,7 @@ function main() {
   <li><a class="reference" href="#printRainbow,string,set[Style]"
     title="printRainbow(s: string; styled: set[Style] = {})"><wbr />print<wbr />Rainbow<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printLnRainbow,T,set[Style]"
-    title="printLnRainbow[T](s: T; styled: set[Style])"><wbr />print<wbr />Ln<wbr />Rainbow<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="printLnRainbow[T](s: T; styled: set[Style] = {})"><wbr />print<wbr />Ln<wbr />Rainbow<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printBiCol,T,string,string,string,int,bool,set[Style]"
     title="printBiCol[T](s: T; sep: string = &quot;:&quot;; colLeft: string = yellowgreen;
               colRight: string = termwhite; xpos: int = 0; centered: bool = false;
@@ -6019,7 +6019,7 @@ class="link-seesrc" target="_blank">Source</a>
 <a href="/edit/devel/cx.nim#L2268" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
-<dt id="printLnRainbow"><a name="printLnRainbow,T,set[Style]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnRainbow</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">styled</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span><span class="Other">)</span></pre></dt>
+<dt id="printLnRainbow"><a name="printLnRainbow,T,set[Style]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printLnRainbow</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">styled</span><span class="Other">:</span> <span class="Identifier">set</span><span class="Other">[</span><span class="Identifier">Style</span><span class="Other">]</span> <span class="Other">=</span> <span class="Other">{</span><span class="Other">}</span><span class="Other">)</span></pre></dt>
 <dd>
 <p>printLnRainbow</p>
 <p>print multicolored string with styles , for available styles see print</p>
@@ -8213,7 +8213,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-02-18 19:50:03 UTC</small>
+        <small>Made with Nim. Generated: 2017-02-20 20:31:12 UTC</small>
       </div>
     </div>
   </div>
